# openmovieeditor

./: .gitignore  AUTHORS  AudioClip.H  AudioClip.cxx  AudioClipBase.H  AudioClipBase.cxx  AudioFileQT.H  AudioFileQT.cxx  AudioFileQT.h  AudioFileSnd.H  AudioFileSnd.cxx  AudioTrack.H  AudioTrack.cxx  AudioTrack.h  AutomationDragHandler.H  AutomationDragHandler.cxx  AutomationPoint.H  AutomationPoint.cxx  CODEC_DEFINITION_FORMAT  Clip.H  Clip.cxx  Clip.h  Codecs.H  Codecs.cxx  Cwidget.H  DragHandler.H  DragHandler.h  Draw.H  Draw.cxx  FILE_FORMAT  FileBrowser.H  FileBrowser.cxx  FilmStrip.H  FilmStrip.cxx  Flmm_Scalebar.H  Flmm_Scalebar.cxx  IAudioFile.H  IAudioReader.H  IProject.H  IVideoFile.H  (+92 more)
ErrorDialog/: ErrorDialog.cxx  ErrorDialog.fl  FltkErrorHandler.H  FltkErrorHandler.cxx  IErrorHandler.H  IErrorHandler.cxx
LoadSaveManager/: LoadSaveManager.H  LoadSaveManager.cxx
ProgressDialog/: IProgressListener.H  ProgressDialog.cxx  ProgressDialog.fl  ProgressDialog.h  SConscript
admin/: INSTALL_FFMPEG_ACL_LIBQUICKTIME  SIMPLE_FONT_API  env.sh  gen_sloc.sh  sloc2html.py
cursors/: clip_a_cursor.crsr  clip_b_cursor.crsr
debian/: Makefile.am  changelog  control  copyright  menu  openmovieeditor.doc-base  openmovieeditor.sgml  rules
doc/: Makefile.am  preview.html  preview2.html  style.css  tutorial.html  tutorial_es.html
doc/images/: Makefile.am
ebuilds/: openmovieeditor-0.0.20060331.ebuild
gone/: DocManager.H
icons/: Makefile.am  magnify_minus.xpm  magnify_plus.xpm  trash_2.xpm  trash_big.xpm
portaudio/: SConscript
sexpr/: SConscript  io.c  parser.c  sexp.c  sexp.h  sexp_memory.c  sexp_ops.c  sexp_ops.h
sl/: SConscript
src/: AbstractEffectFactory.H  AddCommand.H  AddCommand.cxx  AddTrackCommand.H  AddTrackCommand.cxx  AudioClip.H  AudioClip.cxx  AudioClip2.H  AudioClip2.cxx  AudioClipArtist.H  AudioClipArtist.cxx  AudioClipBase.H  AudioClipBase.cxx  AudioFileFactory.cxx  AudioFileFfmpeg.H  AudioFileFfmpeg.cxx  AudioFileGmerlin.H  AudioFileGmerlin.cxx  AudioFileMpeg3.H  AudioFileMpeg3.cxx  AudioFileQT.H  AudioFileQT.cxx  AudioFileSnd.H  AudioFileSnd.cxx  AudioFilter.H  AudioFilterFactory.H  AudioThreadedRingbuffer.H  AudioThreadedRingbuffer.cxx  AudioTrack.H  AudioTrack.cxx  AudioVolumeFilter.H  AudioVolumeFilter.cxx  AudioVolumeFilterFactory.H  AudioVolumeFilterFactory.cxx  AutomationAddCommand.H  AutomationAddCommand.cxx  AutomationDragHandler.H  AutomationDragHandler.cxx  AutomationDuoMoveCommand.H  AutomationDuoMoveCommand.cxx  (+287 more)
src/ColorCurve/: Makefile.am
src/ErrorDialog/: IErrorHandler.H  IErrorHandler.cxx  Makefile.am
src/FloatNodes/: BezierCurveNode.H  Float0rBoolButton.H  Float0rBoolButton.cxx  Float0rColorButton.H  Float0rColorButton.cxx  Float0rDoubleSlider.H  Float0rDoubleSlider.cxx  Float0rGraphEditor.H  Float0rGraphEditor.cxx  Float0rNode.H  Float0rNode.cxx  FloatNodeFilter.H  FloatNodeFilter.cxx  FloatNodeFilterDialog.H  FloatNodeFilterDialog.cxx  FloatNodeFilterDialog.fl  FloatNodeFilterFactory.H  FloatNodeFilterFactory.cxx  IFloatNode.H  IFloatNodeFilterFactoryPlugin.H  ImageNode.H  Makefile.am  NodeFilterFloat0rFactory.H  NodeFilterFloat0rFactory.cxx  NodeFilterFloat0rFactoryPlugin.H  NodeFilterFloat0rFactoryPlugin.cxx  PreviewNode.H  SinkFloatNode.H  SinkFloatNode.cxx  SrcFloatNode.H  SrcFloatNode.cxx
src/Frei0r/: Makefile.am
src/GmerlinEffects/: GmerlinFactoryPlugin.cxx  Makefile.am
src/GmerlinRender/: FileWriterOgg.H  FileWriterOgg.cxx  Makefile.am  OggDialog.H  OggDialog.cxx  OggDialog.fl
src/LiftGammaGain/: LiftGammaGainFilter.H  LiftGammaGainFilter.cxx  LiftGammaGainWidget.H  LiftGammaGainWidget.cxx  LiftGammaGainWidget.fl  LiftGammaGainWrapperWidget.H  LiftGammaGainWrapperWidget.cxx  Makefile.am
src/LoadSaveManager/: LoadSaveManager.H  LoadSaveManager.cxx  Makefile.am
src/NodeEditor/: Frei0rGraphEditor.H  Frei0rGraphEditor.cxx  Makefile.am  NodeFilterDialog.cxx  NodeFilterDialog.fl
src/ProgressDialog/: Makefile.am  ProgressDialog.cxx  ProgressDialog.fl
src/RenderDialog/: EncodingPreset.H  EncodingPreset.cxx  Makefile.am  RenderDialog.H  RenderDialog.cxx  RenderDialog.fl  VideoWriterQT.cxx
src/YoutubeRenderer/: Makefile.am  VideoWriterMP4.H  VideoWriterMP4.cxx  YoutubeDialog.H  YoutubeDialog.cxx  YoutubeDialog.fl  YoutubeUploader.H  YoutubeUploader.cxx
src/gone/: Command.H  DocManager.cxx
src/portaudio/: Makefile.am
src/timeline/: Clip.H  Clip.cxx  ClipIdProvider.H  Makefile.am  SConscript  TimelineBase.H  TimelineBase.cxx  Track.H  Track.cxx
tests/: SConscript  errorDialogTest.cxx  testCodecParameters.cxx
timeline/: Clip.H  Clip.cxx  Timeline.cxx  TimelineBase.H  TimelineBase.cxx  Track.H  Track.cxx
tinyxml/: SConscript
