# Copyright (C) 2005 Richard Spindler <richard.spindler AT gmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = openme_1.png openme_2.png openme_3.png openme_4.png\
             openme_5.png openme_6.png openme_7.png openme_8.png\
						 openme_9.png openme_10.png openme_11.png openme_12.png

install-data-local:
	$(mkinstalldirs) $(prefix)/share/doc/openmovieeditor/
	$(INSTALL_DATA) $(srcdir)/openme_1.png $(prefix)/share/doc/openmovieeditor/openme_1.png
	$(INSTALL_DATA) $(srcdir)/openme_2.png $(prefix)/share/doc/openmovieeditor/openme_2.png
	$(INSTALL_DATA) $(srcdir)/openme_3.png $(prefix)/share/doc/openmovieeditor/openme_3.png
	$(INSTALL_DATA) $(srcdir)/openme_4.png $(prefix)/share/doc/openmovieeditor/openme_4.png
	$(INSTALL_DATA) $(srcdir)/openme_5.png $(prefix)/share/doc/openmovieeditor/openme_5.png
	$(INSTALL_DATA) $(srcdir)/openme_6.png $(prefix)/share/doc/openmovieeditor/openme_6.png
	$(INSTALL_DATA) $(srcdir)/openme_7.png $(prefix)/share/doc/openmovieeditor/openme_7.png
	$(INSTALL_DATA) $(srcdir)/openme_8.png $(prefix)/share/doc/openmovieeditor/openme_8.png
	$(INSTALL_DATA) $(srcdir)/openme_9.png $(prefix)/share/doc/openmovieeditor/openme_9.png
	$(INSTALL_DATA) $(srcdir)/openme_10.png $(prefix)/share/doc/openmovieeditor/openme_10.png
	$(INSTALL_DATA) $(srcdir)/openme_11.png $(prefix)/share/doc/openmovieeditor/openme_11.png
	$(INSTALL_DATA) $(srcdir)/openme_12.png $(prefix)/share/doc/openmovieeditor/openme_12.png

